# super-trader

./: .gitignore  CNAME  README.md  flake.nix  index.html  super-trader-12c76bfe36206b9d.js  super-trader-12c76bfe36206b9d_bg.wasm  super-trader-62deefa2cfacf469.js  super-trader-62deefa2cfacf469_bg.wasm  super-trader-71e36a7f84dcd40f.js  super-trader-71e36a7f84dcd40f_bg.wasm  super-trader-a79004cc2c9f8852.js  super-trader-a79004cc2c9f8852_bg.wasm  super-trader-c561eabf55434f70.js  super-trader-c561eabf55434f70_bg.wasm
.github/workflows/: deploy.yml
super-trader/: Cargo.toml  index.html
super-trader/src/: lib.rs
