[package]
name = "super-trader"
version = "0.1.0"
edition = "2024"

# Needed so the wasm build can export JS bindings
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
crossbeam-queue = "0.3.12"
eframe = { version = "0.32.3", features = ["wgpu", "glow"] }
egui = "0.32.3"
egui_plot = "0.33.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
log = "0.4.28"
rand = { version = "0.9.2"}
rand_distr = "0.5.1"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = ["HtmlCanvasElement"] }
